Installations/ingress-controller/test-ingress1.yaml
---
apiVersion: apps/v1
kind: Deployment                    
metadata: 
  name: game-of-life
  namespace: default
spec:
  minReadySeconds: 5
  replicas: 2
  selector:
    matchLabels:
      app: game-of-life
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: game-of-life
      labels:
        app: game-of-life
    spec:
      containers:
        - image: tarunkumarpendem/gol:1.0
          name: game-of-life
          ports:
            - containerPort: 8080
              protocol: TCP

---
apiVersion: apps/v1
kind: Deployment                    
metadata: 
  name: spring-pet-clinic
  namespace: default
spec:
  minReadySeconds: 5
  replicas: 2
  selector:
    matchLabels:
      app: spring-pet-clinic
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: spring-pet-clinic
      labels:
        app: spring-pet-clinic
    spec:
      containers:
        - image: tarunkumarpendem/spc:1.0
          name: spring-pet-clinic
          ports:
            - containerPort: 8080
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: gol-svc
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 1000
      protocol: TCP
      name: gameoflife-webport
  selector:
    app: game-of-life
    
---
apiVersion: v1
kind: Service
metadata:
  name: spc-svc
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 2000
      protocol: TCP
      name: springpetclinic-webport
  selector:
    app: spring-pet-clinic

---
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: my-ingress
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
    - host: gameoflife.com
      http:
        paths:
        - backend:
            service:
              name: gol-svc
              port:
                number: 8080
          path: /
          pathType: Prefix
    - host: springpetclinic.com
      http:
        paths:
        - backend:
            service:
              name: spc-svc
              port:
                number: 8080
          path: /
          pathType: Prefix

# path based routing
---
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: path-based-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginxd
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  rules:
  - host: myapps.com
    http:
      paths:
      - backend:
          service:
            name: gol-svc
            port:
              number: 8080
        path: /gameoflife
        pathType: Prefix
  - host: myapps.com
    http:
      paths:
      - backend:
          service:
            name: spc-svc
            port:
              number: 80
        path: /springpetclinic
        pathType: Prefix

# manifest for launching app-lb
---
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: micro-ingress-alb
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip 
spec:
  rules:
  - host: alb.gameoflife.myapps.com
    http:
      paths:
      - backend:
          service:
            name: gol-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: alb.springpetclinic.myapps.com
    http:
      - backend:
          service:
            name: spc-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
